Add pursuits; update CSS

--- a/web/_layout.html
+++ b/web/_layout.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <a href="/">Home</a> // <a href="/posts">Posts</a> //
-      <a href="/projects">Projects</a> //
+      <a href="/projects">Pursuits</a> //
       <a href="/about">About</a>
     </header>
     <main>{{content}}</main>
