--- a/web/_layout.html
+++ b/web/_layout.html
@@ -16,6 +16,7 @@
     <header>
       <a href="/">Home</a> // <a href="/posts">Posts</a> //
       <a href="/projects">Pursuits</a> //
+      <a href="https://kb.schrockwell.com/">KB</a> //
       <a href="/about">About</a>
     </header>
     <main>{{content}}</main>
